# ai-agents

./: .gitignore  README.md  engagement_plan_oss_final.md  git-reword-commit-plan.md  leetcode_math_wizard_complete_plan.md  leetcode_solution_plan_final.md  oss-engagement-cli.md
.claude/homunculus/instincts/inherited/: ai-agents-instincts.yaml
.claude/skills/ai-agents/: SKILL.md
git-reword-commit-cli/: .cproject  .gitignore  .project  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  git-reword-commit-cli.pro  meson.build
git-reword-commit-cli/bindings/dart/: CMakeLists.txt  git_reword_dart.cpp  pubspec.yaml
git-reword-commit-cli/bindings/dart/lib/: git_reword.dart
git-reword-commit-cli/bindings/dart/lib/src/: bindings.dart  git_operations.dart  platform.dart  reword_engine.dart
git-reword-commit-cli/bindings/java/: CMakeLists.txt  git_reword_jni.cpp
git-reword-commit-cli/bindings/java/src/com/gitreword/: GitOperations.java  NativeLibrary.java  Platform.java  RewordEngine.java  RewordResult.java  RewordStatus.java
git-reword-commit-cli/bindings/kotlin/: GitRewordExtensions.kt
git-reword-commit-cli/bindings/python/: CMakeLists.txt  __init__.py  bindings.cpp  pyproject.toml
git-reword-commit-cli/cmake/toolchains/: android.cmake  ios.cmake  mingw.cmake  termux.cmake
git-reword-commit-cli/include/git_reword/: export.hpp  git_operations.hpp  platform.hpp  reword_engine.hpp  utils.hpp
git-reword-commit-cli/scripts/: build.bat  build.sh  package.sh
git-reword-commit-cli/src/: git_operations.cpp  main.cpp  platform.cpp  reword_engine.cpp  utils.cpp
