[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.10.0", "cmake>=3.14"]
build-backend = "setuptools.build_meta"

[project]
name = "git-reword"
version = "1.0.0"
description = "Python bindings for git-reword-commit-cli"
readme = "README.md"
authors = [
    {name = "Baneeishaque K"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
keywords = ["git", "commit", "reword", "rebase"]

[project.urls]
"Homepage" = "https://github.com/Baneeishaque/AI-Agents"
"Bug Tracker" = "https://github.com/Baneeishaque/AI-Agents/issues"

[tool.setuptools]
packages = ["git_reword"]
